--- a/index.html
+++ b/index.html
@@ -947,9 +947,11 @@
 </head>
 <body>
     <nav>
-        <div id="navLogoContainer" class="nav-logo-placeholder" onclick="openProfileModal()">
-            <i class="fas fa-image"></i>
-        </div>
+         <div class="hero-content">
+            <div class="perfil-box">
+                <img src="img/Perfil.jpeg" alt="Foto de perfil" class="foto-circular">
+                <p class="nombre-autor">Jimmy Espinoza Flores</p>
+            </div>
         <ul>
             <li><a href="#" data-page="inicio" class="nav-link active"><i class="fas fa-home"></i> Inicio</a></li>
             <li><a href="#" data-page="semanas" class="nav-link"><i class="fas fa-calendar-week"></i> Semanas</a></li>
@@ -1646,3 +1648,4 @@
     </script>
 </body>
 </html>
+
