--- a/index.html
+++ b/index.html
@@ -803,7 +803,28 @@
             margin-bottom: 1rem;
             text-shadow: 0 0 20px rgba(0, 210, 255, 0.6);
         }
+        .profile-edit-btn {
+            background: linear-gradient(135deg, #00d2ff, #0099cc);
+            border: none;
+            padding: 1rem 2.5rem;
+            border-radius: 30px;
+            color: #0f2027;
+            cursor: pointer;
+            font-size: 1.1rem;
+            font-weight: 600;
+            margin-top: 2rem;
+            display: inline-flex;
+            align-items: center;
+            gap: 0.7rem;
+            transition: all 0.3s;
+            box-shadow: 0 5px 15px rgba(0, 210, 255, 0.4);
+        }
 
+        .profile-edit-btn:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 8px 25px rgba(0, 210, 255, 0.6);
+            background: linear-gradient(135deg, #00ffff, #00bfff);
+        }
         .profile-bio {
             font-size: 1.2rem;
             color: #b0d4e3;
@@ -950,11 +971,8 @@
                         <i class="fas fa-user"></i>
                     </div>
                 </div>
-                <h1 class="profile-welcome" id="profileWelcome">Bienvenido al Repositorio</h1>
-                <p class="profile-bio" id="profileBio">Sistema de gestión y almacenamiento de trabajos académicos organizados por semanas. Explora, edita y administra tu contenido de manera eficiente.</p>
-                <button class="profile-edit-btn" onclick="openProfileModal()">
-                    <i class="fas fa-edit"></i> Editar Perfil
-                </button>
+                <h1 class="profile-welcome" id="profileWelcome">Bienvenido a mi Repositorio de Base de Datos II</h1>
+                <p class="profile-bio" id="profileBio">Este respositorio almacena todas las actividades del curso de base de datos II</p>
             </div>
         </div>
 
@@ -966,7 +984,9 @@
                     </div>
                 </div>
                 <h1>Sobre Mí</h1>
-                <p id="aboutBio" style="white-space: pre-line;">Aquí puedes escribir más información sobre ti, tus intereses académicos, proyectos y objetivos.</p>
+                <p id="aboutBio" style="white-space: pre-line;">Soy ESPINOZA FLORES, Jimmy Guido estudiante de la facultad de ingenieria en la universidad peruana los andes 
+                (UPLA) la carrera de ING. de Sistemas y Computacion, voy cursando el 6°to semestre en este transcurso a aprendido muchas cosas mas a fondo sobre el area y 
+                gusta seguir aprendiendo mas sobre mi carrera.</p>
             </div>
         </div>
 
