--- a/index.html
+++ b/index.html
@@ -947,11 +947,9 @@
 </head>
 <body>
     <nav>
-         <div class="hero-content">
-            <div class="perfil-box">
-                <img src="img/Perfil.jpeg" alt="Foto de perfil" class="foto-circular">
-                <p class="nombre-autor">Jimmy Espinoza Flores</p>
-            </div>
+       <div id="navLogoContainer" class="nav-logo-placeholder" onclick="openProfileModal()">
+            <i class="fas fa-image"></i>
+        </div>
         <ul>
             <li><a href="#" data-page="inicio" class="nav-link active"><i class="fas fa-home"></i> Inicio</a></li>
             <li><a href="#" data-page="semanas" class="nav-link"><i class="fas fa-calendar-week"></i> Semanas</a></li>
@@ -1647,5 +1645,6 @@
     </script>
 </body>
 </html>
+
 
 
